# tradooor

./: .gitignore  ADD_AI_ML_TABLES.sql  ADD_AI_SIGNALS.sql  ADD_CLOSED_LOTS.sql  ADD_CLOSED_LOT_IMPROVEMENTS.sql  ADD_ENHANCED_SIGNALS.sql  ADD_LEVEL_1_2_FEATURES.sql  ADD_NORMALIZED_TRADES.sql  ADD_OPEN_POSITIONS.sql  ADD_PAPER_TRADING.sql  ADD_PORTFOLIO_BASELINE.sql  ADD_POSITION_CHANGE_PERCENT.sql  ADD_POSITION_COLUMN_AND_RECALCULATE.md  ADD_PUMPFUN_TIMESTAMP.sql  ADD_REALIZED_PNL_USD.sql  ADD_SEQUENCE_NUMBER_TO_CLOSED_LOT.sql  ADD_SIGNALS.sql  ADD_TRADER_CORRELATION_AND_TAGS.sql  ADD_TRADE_FEATURES.sql  ADD_TRADE_USD_PNL.sql  ADD_UNIQUE_TRADE_SIGNATURE.sql  ADD_VIRTUAL_POSITIONS.sql  ADD_VIRTUAL_POSITIONS_PART1.sql  ADD_VIRTUAL_POSITIONS_PART2.sql  ADD_VIRTUAL_POSITIONS_PART3.sql  ADD_VIRTUAL_POSITIONS_PART4.sql  ADD_VIRTUAL_POSITIONS_PART5.sql  ADD_WALLET_PROCESSING_QUEUE.sql  AI_TRADING_SYSTEM_DESIGN.md  ARCHITECTURE.md  BACKFILL_OPTIMIZATION.md  BIRDEYE_API_USAGE.md  CHECK_DATA.sql  CHECK_DB_STATUS.sh  CHECK_FRONTEND.sh  CHECK_METRICS_STATUS.sh  CLEANUP_ALL_DUPLICATES.sql  CLEANUP_DUPLICATE_SIGNALS.sql  CLEANUP_HISTORICAL_DATA.sql  CLEAR_CACHE.md  (+101 more)
.claude/: settings.local.json
apps/spectre/: .env.example  Cargo.toml  deploy.sh
apps/spectre/src/: main.rs  pumpfun_trade.rs  trader.rs
apps/spectre/src/birdeye/: mod.rs
apps/spectre/src/config/: mod.rs
apps/spectre/src/jupiter/: mod.rs
apps/spectre/src/position/: mod.rs
apps/spectre/src/pumpportal/: mod.rs
apps/spectre/src/redis/: mod.rs
migrations/: add_consensus_signal.sql  add_score_7d_30d_columns.sql  (+7 more)
(+240 files in other folders)
